<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SVTask5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connection">Connetcting...</string>
    <string name="loading_contacts">Retrieving contact list</string>
    <string name="loading_full_info">Retrieving full contact information</string>
    <string name="no_available_contacts">No more available contacts</string>
    <string name="loading_error">Error while retrieving contacts</string>
    <string name="loading_error_full_contact">Error while retrieving full contact information</string>
    <string name="email_label">Email:</string>
    <string name="email_test">test@gmail.com</string>
    <string name="loading_more">Loading more contacts...</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="add_contact">Add contact</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="email">Email</string>
    <string name="telephon">Tel. number</string>
    <string name="photo">Photo</string>
    <string name="new_contact">New contact was created</string>
    <string name="required">You are not fill all required fields!</string>
    <string name="new_contact_activity_title">New contact</string>
    <string name="continue_button">Continue</string>
    <string name="update">Update informationn</string>
    <string name="refresh">Refresh program?</string>
    <string name="network_info">Network information</string>
    <string name="network">Network is unavailable. Turn on WIFI.</string>
    <string name="title_facebook_login">FB login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_menu">Profile</string>
    <string name="button_logout">Logout</string>
    <string name="facebook_id">310602182434992</string>
    <string name="profile">User profile</string>

</resources>